add input markup and styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<link rel="stylesheet" href="styles.css" type="text/css">
 	</head>
 	<body>
-		
+		<form action="#" method="GET">
+			<input type="text" placeholder="MBTA Stop Name (ex: &quot;Park St&quot;)" >
+		</form>
 		<script src="script.js"></script>
 	</body>
 </html>
