--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<body>
 		<form action="#" method="GET">
 			<input type="text" placeholder="MBTA Stop Name (ex: &quot;Park St&quot;)" >
+			<ul>
+				<li>Stops</li>
+				<li>Woooo</li>
+			</ul>
 		</form>
 		<script src="script.js"></script>
 	</body>
