--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<form action="#" method="GET">
-			<input type="text" placeholder="MBTA Stop Name (ex: &quot;Park St&quot;)" >
-			<ul>
+			<input type="text" class="search" placeholder="MBTA Stop Name (ex: &quot;Park St&quot;)" >
+			<ul class="suggestions">
 				<li>Stops</li>
 				<li>Woooo</li>
 			</ul>
