remove demo list elements

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 	<body>
 		<form action="#" method="GET">
 			<input type="text" class="search" placeholder="MBTA Stop Name (ex: &quot;Park St&quot;)" >
-			<ul class="suggestions">
-				<li>Stops</li>
-				<li>Woooo</li>
-			</ul>
+			<ul class="suggestions"></ul>
 		</form>
 		<script src="script.js"></script>
 	</body>
